# shorts

./: CMakeLists.txt  README.md  README.txt  manifest.json.4pro  manifest.json.in  shorts-app.pro  shorts.apparmor  shorts.desktop  shorts.desktop.in.in
shorts/: CMakeLists.txt  CachingNetworkManagerFactory.cpp  CachingNetworkManagerFactory.h  main.cpp  networkmanager.cpp  networkmanager.h  shorts.pro  shorts.qrc
shorts/click/: CMakeLists.txt  manifest.json.in  shorts.apparmor
shorts/debian/: changelog  control  copyright  rssreader-app-autopilot.install
shorts/po/: am.po  ar.po  ast.po  az.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  com.ubuntu.shorts.pot  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hu.po  id.po  is.po  it.po  ja.po  km.po  ko.po  lv.po  ms.po  my.po  nb.po  nl.po  or.po  (+17 more)
shorts/qml/: CMakeLists.txt  shorts-app.qml
shorts/qml/components/: ActionIcon.qml  ArticleViewItem.qml  CMakeLists.txt  DarkModeShader.qml  FakeHeader.qml  GoogleFeedApi.qml  GridModeItem.qml  ListModeItem.qml  NetworkManager.qml  OptionsKeeper.qml  OrganicGrid.qml  OrganicGrid.qml.~1~  PageLoader.qml  ReadingOptions.qml
shorts/qml/content/: CMakeLists.txt  SharePage.qml  YadApi.qml
shorts/qml/delegates/: ArticleFullImg.qml  ArticleOneImgA.qml  ArticleTextA.qml  ArticleTextB.qml  CMakeLists.txt
shorts/qml/icons/: CMakeLists.txt
shorts/qml/nongoogle/: AppendNGFeedPage.qml  CMakeLists.txt  Positioner.qml  XmlNetwork.qml
shorts/qml/pages/: AppendFeedPage.qml  ArticleViewPage.qml  CMakeLists.txt  ChooseTopicPage.qml  CreateTopicPage.qml  EditFeedPage.qml  FeedComponent.qml  MainPage.qml  SettingsPage.qml  TopicComponent.qml  TopicManagementPage.qml  YadLoginPage.qml
shorts/qml/tabs/: BaseTab.qml  CMakeLists.txt  SavedTab.qml  SavedTab.qml.autosave  ShortsTab.qml  TopicTab.qml
shorts/qml/utils/: CMakeLists.txt  databasemodule_v2.js  imgSeparator.js
shorts/tests/autopilot/shorts_app/: __init__.py
shorts/tests/autopilot/shorts_app/tests/: __init__.py  test_rssreader.py
shorts/xml2json/: utilities.cpp  utilities.h
